--- a/src/App.css
+++ b/src/App.css
@@ -8,5 +8,6 @@
 
 .arrow:hover {
     color: rgba(255, 255, 255, 1);
-    box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
+    box-shadow: 0 5px 15px rgba(227, 195, 250, 0.4);
 }
+
